:wrench: 本当にbuildされてるか確認

--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - uses: primer/figma-action@v1.0.0-alpha.3
         with:
-          args: "format=svg outputDir=./src/"
+          args: "format=svg outputDir=./build/"
         env:
           FIGMA_FILE_URL: "https://www.figma.com/file/YhHWg9mZ6GdKkseHAAS1gw/testing"
           FIGMA_TOKEN: ${{ secrets.FIGMA_TOKEN }}
