--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -1,13 +1,16 @@
 name: Export SVG from Figma
 on: [push]
 jobs:
-  all:
-    name: Figma Export
-    runs-on: ubuntu-latest
-    steps:
-      - uses: primer/figma-action@v1.0.0-alpha.3
-        with:
-          args: "format=svg outputDir=./build/"
-        env:
-          FIGMA_FILE_URL: "https://www.figma.com/file/YhHWg9mZ6GdKkseHAAS1gw/testing"
-          FIGMA_TOKEN: ${{ secrets.FIGMA_TOKEN }}
+  name: Figma Export
+  runs-on: ubuntu-latest
+  steps:
+    - name: checkout
+      uses: actions/checkout@v2
+    - name: set directory
+      working-directory: script
+    - name: node setup
+      uses: actions/setup-node@v2
+      with:
+        node-version: "12"
+      run: npm install
+      run: npm run start FIGMA_TOKEN={{ secrets.FIGMA_TOKEN }}
