--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -7,7 +7,7 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2
       - name: node setup
-        working-directory: script
+        working-directory: ./script
         uses: actions/setup-node@v2
           with:
             node-version: "12"
